--- a/UI/ui_Home.ui
+++ b/UI/ui_Home.ui
@@ -16,60 +16,6 @@
   <property name="styleSheet">
    <string notr="true">background-color: rgb(226, 255, 247);</string>
   </property>
-  <widget class="QPushButton" name="btnConfiguration">
-   <property name="geometry">
-    <rect>
-     <x>420</x>
-     <y>230</y>
-     <width>191</width>
-     <height>61</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Century Gothic</family>
-     <pointsize>12</pointsize>
-     <weight>75</weight>
-     <italic>false</italic>
-     <bold>true</bold>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(0, 235, 235, 255), stop:1 rgba(85, 255, 255, 255));
-border-radius : 25px;</string>
-   </property>
-   <property name="text">
-    <string>Configurations</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="btnRun">
-   <property name="geometry">
-    <rect>
-     <x>420</x>
-     <y>370</y>
-     <width>191</width>
-     <height>61</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Century Gothic</family>
-     <pointsize>12</pointsize>
-     <weight>75</weight>
-     <bold>true</bold>
-    </font>
-   </property>
-   <property name="layoutDirection">
-    <enum>Qt::LeftToRight</enum>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(0, 235, 235, 255), stop:1 rgba(85, 255, 255, 255));
-border-radius : 25px;</string>
-   </property>
-   <property name="text">
-    <string>Run</string>
-   </property>
-  </widget>
   <widget class="QFrame" name="frame">
    <property name="geometry">
     <rect>
@@ -78,6 +24,9 @@ border-radius : 25px;</string>
      <width>1000</width>
      <height>700</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(54, 54, 54);</string>
    </property>
    <property name="frameShape">
     <enum>QFrame::StyledPanel</enum>
@@ -88,7 +37,7 @@ border-radius : 25px;</string>
    <widget class="QStackedWidget" name="stackedWidget">
     <property name="geometry">
      <rect>
-      <x>20</x>
+      <x>40</x>
       <y>60</y>
       <width>1000</width>
       <height>700</height>
@@ -97,14 +46,123 @@ border-radius : 25px;</string>
     <property name="currentIndex">
      <number>0</number>
     </property>
-    <widget class="QWidget" name="page"/>
+    <widget class="QWidget" name="page">
+     <widget class="QLabel" name="label">
+      <property name="geometry">
+       <rect>
+        <x>40</x>
+        <y>-10</y>
+        <width>871</width>
+        <height>61</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Cooper Black</family>
+        <pointsize>28</pointsize>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: rgb(41, 173, 255);</string>
+      </property>
+      <property name="text">
+       <string>Remote Control With Email Service</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="btnConfiguration">
+      <property name="geometry">
+       <rect>
+        <x>340</x>
+        <y>240</y>
+        <width>240</width>
+        <height>61</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Century Gothic</family>
+        <pointsize>12</pointsize>
+        <weight>75</weight>
+        <italic>false</italic>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QPushButton {
+	background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:0, stop:0 				rgba(0, 235, 235, 255), stop:1 rgba(85, 255, 255, 255));
+	color: rgb(0, 0, 0);
+	border-radius : 25px;
+}
+
+QPushButton:hover{
+	background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:0, stop:0.38806 rgba(255, 15, 172, 255), stop:0.995025 rgba(255, 43, 198, 255));
+}</string>
+      </property>
+      <property name="text">
+       <string>Configurations</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="btnRun">
+      <property name="geometry">
+       <rect>
+        <x>340</x>
+        <y>380</y>
+        <width>240</width>
+        <height>61</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Century Gothic</family>
+        <pointsize>12</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="layoutDirection">
+       <enum>Qt::LeftToRight</enum>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QPushButton {
+	background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:0, stop:0 				rgba(0, 235, 235, 255), stop:1 rgba(85, 255, 255, 255));
+	color: rgb(0, 0, 0);
+	border-radius : 25px;
+}
+
+QPushButton:hover{
+	background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:0, stop:0.38806 rgba(255, 15, 172, 255), stop:0.995025 rgba(255, 43, 198, 255));
+}</string>
+      </property>
+      <property name="text">
+       <string>Run</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_2">
+      <property name="geometry">
+       <rect>
+        <x>410</x>
+        <y>90</y>
+        <width>101</width>
+        <height>71</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">image: url(:/logo_black/Assets/Images/logo_1.png);</string>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="pixmap">
+       <pixmap resource="resource.qrc">:/logo/Assets/Images/logo.png</pixmap>
+      </property>
+     </widget>
+    </widget>
     <widget class="QWidget" name="page_2"/>
    </widget>
   </widget>
-  <zorder>frame</zorder>
-  <zorder>btnConfiguration</zorder>
-  <zorder>btnRun</zorder>
  </widget>
- <resources/>
+ <resources>
+  <include location="resource.qrc"/>
+ </resources>
  <connections/>
 </ui>
