--- a/UI/ui_CustomDialog.ui
+++ b/UI/ui_CustomDialog.ui
@@ -16,45 +16,10 @@
   <property name="styleSheet">
    <string notr="true">background-color: rgb(54, 54, 54);</string>
   </property>
-  <widget class="QPushButton" name="btnCancel">
+  <widget class="QPushButton" name="btnAddRole">
    <property name="geometry">
     <rect>
-     <x>220</x>
-     <y>230</y>
-     <width>120</width>
-     <height>50</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Century Gothic</family>
-     <pointsize>12</pointsize>
-     <weight>75</weight>
-     <bold>true</bold>
-    </font>
-   </property>
-   <property name="layoutDirection">
-    <enum>Qt::LeftToRight</enum>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">QPushButton {
-	background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:0, stop:0 				rgba(0, 235, 235, 255), stop:1 rgba(85, 255, 255, 255));
-	color: rgb(0, 0, 0);
-	border-radius : 25px;
-}
-
-QPushButton:hover{
-	background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:0, stop:0.38806 rgba(255, 15, 172, 255), stop:0.995025 rgba(255, 43, 198, 255));
-}</string>
-   </property>
-   <property name="text">
-    <string>Cancel</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="btnAddAdvanced">
-   <property name="geometry">
-    <rect>
-     <x>60</x>
+     <x>150</x>
      <y>230</y>
      <width>120</width>
      <height>50</height>
@@ -135,7 +100,7 @@ QLabel, QLineEdit {
       <rect>
        <x>71</x>
        <y>16</y>
-       <width>122</width>
+       <width>251</width>
        <height>22</height>
       </rect>
      </property>
@@ -143,7 +108,7 @@ QLabel, QLineEdit {
       <string notr="true">background-color: rgb(255, 255, 255);</string>
      </property>
      <property name="text">
-      <string>Basic Controller</string>
+      <string>Controller</string>
      </property>
     </widget>
     <widget class="QLabel" name="label_4">
