--- a/UI/ui_Configuration.ui
+++ b/UI/ui_Configuration.ui
@@ -37,15 +37,15 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>330</x>
-      <y>20</y>
-      <width>381</width>
-      <height>71</height>
+      <x>310</x>
+      <y>10</y>
+      <width>375</width>
+      <height>67</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <family>Century Gothic</family>
+      <family>Arial Black</family>
       <pointsize>28</pointsize>
       <weight>75</weight>
       <italic>false</italic>
@@ -173,7 +173,7 @@
      </property>
      <property name="font">
       <font>
-       <family>Century Gothic</family>
+       <family>Arial</family>
        <pointsize>12</pointsize>
        <weight>75</weight>
        <bold>true</bold>
@@ -208,7 +208,7 @@ QPushButton:hover{
      </property>
      <property name="font">
       <font>
-       <family>Century Gothic</family>
+       <family>Arial</family>
        <pointsize>12</pointsize>
        <weight>75</weight>
        <bold>true</bold>
@@ -243,7 +243,7 @@ QPushButton:hover{
      </property>
      <property name="font">
       <font>
-       <family>Century Gothic</family>
+       <family>Arial</family>
        <pointsize>12</pointsize>
        <weight>75</weight>
        <bold>true</bold>
@@ -278,7 +278,7 @@ QPushButton:hover{
      </property>
      <property name="font">
       <font>
-       <family>Century Gothic</family>
+       <family>Arial</family>
        <pointsize>12</pointsize>
        <weight>75</weight>
        <bold>true</bold>
@@ -355,7 +355,7 @@ QPushButton:hover{
      </property>
      <property name="font">
       <font>
-       <family>Century Gothic</family>
+       <family>Arial</family>
        <pointsize>12</pointsize>
        <weight>75</weight>
        <bold>true</bold>
