--- a/UI/ui_CustomMessageBox.ui
+++ b/UI/ui_CustomMessageBox.ui
@@ -72,6 +72,9 @@ QPushButton:hover{
    <property name="text">
     <string>Message</string>
    </property>
+   <property name="wordWrap">
+    <bool>true</bool>
+   </property>
   </widget>
  </widget>
  <resources/>
